--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,6 @@
 	url = https://github.com/mds1/multicall
 [submodule "lib/multicall"]
 	branch = v3.1.0
+[submodule "l2geth"]
+	path = l2geth
+	url = https://github.com/ethereum-pessimism/pessimism-geth
